# quantizeeffinet

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
quantizeeffinet/: __init__.py  converter.py  onnx_to_trtengine.py
src/quantizeeffinet/: __init__.py  converter.py  onnx_to_trtengine.py  utils.py
tests/: test.py  test_pass.py
