[project]
name = "quantizeeffinet"
version = "0.0.0"
description = "A simple package for converting TensorFlow Efficientnet models to ONNX and TensorRT formats."
authors = [
    { name="Zolta Gombar", email="gombarzolta@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tensorflow", "onnx", "tensorrt", "model-conversion", "deep-learning", "machine-learning"]
dependencies = [
    "tensorflow>=2.0",
    "tf2onnx",
    "onnx",
    "onnxconverter-common",
    "tensorrt",
    "numpy",
    "Pillow",
    "cuda-python",
]
license = "Apache-2.0"
license-files = ["src/quantizeeffinet/"]

[project.urls]
Repository = "https://github.com/zotyag/quantizeeffinet"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
